# rhino-compression

./: .gitignore  README.md  pyproject.toml  setup.py
configs/: train_autoencoder_256.yaml  train_autoencoder_kl_256.yaml  train_autoencoder_vq_256.yaml  train_base_config.yaml  train_base_data.yaml  train_sdvae_256.yaml  train_var_vqgan256.yaml  train_var_vqvae.yaml  train_var_vqvae_256.yaml  train_var_vqvae_64.yaml  train_vavae_256.yaml  train_vavae_256_high_kl.yaml  train_vqgan_256.yaml  train_vqvae_64.yaml
configs/autoencoders/: train_autoencoder_256.yaml  train_autoencoder_kl_256.yaml  train_autoencoder_vq_256.yaml  train_divae_256.yaml  train_infovae_256.yaml  train_msvae_128.yaml  train_msvae_128_high_kl.yaml  train_msvae_256.yaml  train_sdvae_256.yaml  train_vavae_256.yaml  train_vavae_256_high_kl.yaml  train_vqgan_256.yaml
rhcompression/boats/: autoencoder_boat.py  autoencoder_kl_boat.py  autoencoder_vq_boat.py  base_vector_quantization_boat.py  contrastive_sdvae_boat.py  dispersive_sdvae_boat.py  divae_boat.py  infovae_boat.py  msvae_boat.py  sdvae_boat.py  var_vqgan_boat.py  var_vqvae_boat.py  vavae_boat.py  vqgan_boat.py  vqvae_boat.py
rhcompression/utils/: hardcode_gen.py  reconstruct_with_codebook.ipynb  softcode_gen.py
rhino_compression.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
run_scripts/: train_autoencoder.py  train_autoencoder_kl.py  train_autoencoder_vq.py  train_divae.py  train_infovae.py  train_msvae.py  train_sdvae.py  train_var_vqvae.py  train_vavae.py  train_vavae_high_kl.py  train_vqgan.py  train_vqvae.py
(+22 files in other folders)
